# tester

./: CMakeLists.txt  com.cpp  comprehensive_diagnostic.cpp  direct_cs_test.cpp  fixed_register_reader.cpp  hardware_debug.cpp  i2c_test.cpp  imu_test2.cpp  imu_testreader.cpp  new_tester.cpp  no_cs_test.cpp  quick_spi_test.cpp  register_scan.cpp  sensor_probe.cpp  spi_test.cpp  wiring_check.cpp  working_i2c_test.cpp
